# dnd-rs

./: Cargo.toml  debug.bat
src/: engine.rs  macros.rs  main.rs
src/actions/: action_template.rs  default_actions.rs  mod.rs  monster_attacks.rs  test_action.rs
src/actors/: actor_template.rs  mod.rs
src/actors/creatures/: mod.rs  zombies.rs
src/conditions/: condition_template.rs  mod.rs
src/engine/: action_overrides.rs  actor_gen.rs  encounter.rs  errors.rs  mod.rs  prompt.rs  roll_event.rs  side_effects.rs  terrain.rs  terrain_gen.rs  triggers.rs  types.rs  unit.rs  util.rs
src/items/: item_template.rs  mod.rs
src/units/: mod.rs  unit_template.rs
