[package]
name = "dnd-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
tyche = "0.3.1"  # for dice
ratatui = "0.29"
crossterm = "0.28"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
